--- a/quest.css
+++ b/quest.css
@@ -99,7 +99,7 @@ main {
 }
 
 .signature {
-    font-family: 'Milton One', serif;
+    font-family: 'Mr De Haviland', cursive;
     font-size: 1.5em; /* Cambia la dimensione come preferisci */
     font-style: italic;
     color: #000; /* Puoi cambiare il colore se desideri qualcosa di più personalizzato */
